# AfpSmallAssignments

./: .gitignore
Set1/: CountArgs.hs  CountZero.hs  SmoothPerms.hs  SmoothPermsTest.hs  inductive_proofs.txt  set1.cabal
